prusti-tests/tests/verify/fail/native/assert-seq.rs
// compile-flags: -Pviper_backend=Lithium

fn main() {
    assert!(true);
    assert!(false); //~ ERROR might not hold
}
